--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -7,5 +7,8 @@ jobs:
 	  - uses: actions/checkout@v3
 	  - name: Set up Python for Demo
 		uses: actions/setup-python@v4
+	  - name: Install dependices
+		run: python -m pip install --upgrade pip
+		pip install pytest
 	  - name: Run tests
 		run: pytest TP1/test.py
