--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -8,7 +8,6 @@ jobs:
       - name: Set up Python for Demo
         uses: actions/setup-python@v4
       - name: Install dependices
-        run: python -m pip install --upgrade pip
-        pip install pytest
+        run: python -m pip install --upgrade pip | pip install pytest
       - name: Run tests
         run: pytest TP1/test.py
