--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -11,3 +11,6 @@ jobs:
         run: python -m pip install --upgrade pip | pip install pytest
       - name: Run tests
         run: pytest TP1/test.py
+      - name: New Branch
+        run: echo "main: ${{ github.ref }}"
+        run: echo "Nom repo: ${{ github.repository }}."
