--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -9,8 +9,8 @@ jobs:
         uses: actions/setup-python@v4
       - name: Install dependices
         run: python -m pip install --upgrade pip | pip install pytest
+      - name: Branch & Repo
+        run: echo "Nom branche ${{ github.ref }}" | echo "Nom repo ${{ github.repository }}."
       - name: Run tests
         run: pytest TP1/test.py
-      - name: New Branch
-        run: echo "main: ${{ github.ref }}"
-        run: echo "Nom repo: ${{ github.repository }}."
+
