--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Install dependices
         run: python -m pip install --upgrade pip | pip install pytest
       - name: Branch & Repo
-        run: echo "Nom branche ${{ github.ref }}" | echo "Nom repo ${{ github.repository }}."
+        run: echo "Nom branche ${{ github.ref }}" ; lsb_release -a
       - name: Run tests
         run: pytest TP1/test.py
 
