--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,16 +1,32 @@
 name: tests unitaires
 on: [push]
+
 jobs:
   test1:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.10"]   # 7.2
+
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python for Demo
+
+      - name: Set up Python
         uses: actions/setup-python@v4
-      - name: Install dependices
-        run: python -m pip install --upgrade pip | pip install pytest
-      - name: Branch & Repo
-        run: echo "Nom branche ${{ github.ref }}" ; lsb_release -a
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: python -m pip install --upgrade pip && pip install pytest
+
+      - name: Branch & OS
+        run: echo "Nom branche: ${{ github.ref }}" ; lsb_release -a
+
+      # 7.3
+      - name: Python version
+        run: python --version
+
       - name: Run tests
         run: pytest TP1/test.py
 
